--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "availity-reactstrap-validation": "^2.3.3",
     "bootstrap": "^4.1.3",
+    "firebase": "^5.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "reactstrap": "~6.5.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
-    "reactstrap":"~6.5.0"
-
-
+    "redux-firestore": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
