--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 /node_modules
 /.pnp
 .pnp.js
-src/firebase/privateConfig.js
 
 # testing
 /coverage
 # production
 /build
+dist
 
 # misc
 .DS_Store
