--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.0",
     "availity-reactstrap-validation": "^2.3.3",
     "bootstrap": "^4.1.3",
     "firebase": "^5.6.0",
