--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "availity-reactstrap-validation": "^2.3.3",
     "bootstrap": "^4.1.3",
     "firebase": "^5.6.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
